# eval-adk

./: .gitignore  README.md
spendmend_adk_app/: .gitignore  GEMINI.md  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP.md  pyproject.toml  verify_setup.py
spendmend_adk_app/app_docs/: DATABASE.md  QUICKSTART.md  QUICKSTART_DATABASE.md
spendmend_adk_app/scripts/: init_database.py
spendmend_adk_app/src/spendmend_adk/: app_factory.py  main.py  settings.py
spendmend_adk_app/src/spendmend_adk/agents/builders/agent_updater/: agent.py  prompt.md
spendmend_adk_app/src/spendmend_adk/agents/builders/baseline_fetcher/: agent.py  prompt.md
spendmend_adk_app/src/spendmend_adk/agents/builders/eval_runner/: agent.py  prompt.md
spendmend_adk_app/src/spendmend_adk/agents/builders/gap_reporter/: agent.py  prompt.md
spendmend_adk_app/src/spendmend_adk/agents/builders/patch_writer/: agent.py  prompt.md
spendmend_adk_app/src/spendmend_adk/agents/focus/spendmend_dev/: agent.py  prompt.md
spendmend_adk_app/src/spendmend_adk/agents/workflow/: root_loop.py
spendmend_adk_app/src/spendmend_adk/eval/: scoring.py
spendmend_adk_app/src/spendmend_adk/eval/datasets/: jira_ticket_sets.jsonl
spendmend_adk_app/src/spendmend_adk/schemas/: common.py  dev_task.py  eval.py  pr_baseline.py  review.py  update_plan.py
spendmend_adk_app/src/spendmend_adk/services/: artifact_service.py  context_cache.py  database_telemetry_plugin.py  plugins.py  session_service.py  telemetry_db.py
spendmend_adk_app/src/spendmend_adk/tools/: artifact_tools.py  databricks_sql_tools.py  fs_tools.py  github_tools.py  jira_tools.py  openapi_toolsets.py
